[gd_scene load_steps=14 format=3 uid="uid://d2geabru1tw8w"]

[ext_resource type="Script" path="res://assets/scripts/Enemy3.gd" id="1_2yds0"]
[ext_resource type="Texture2D" uid="uid://q5gpju1m0d8a" path="res://assets/sprites/enemies/enemy3.svg" id="2_cybcn"]
[ext_resource type="Texture2D" uid="uid://bws4kiwrku3qt" path="res://assets/sprites/enemies/explode/0001.png" id="3_ebjwn"]
[ext_resource type="Texture2D" uid="uid://b6hlpufcvesu8" path="res://assets/sprites/enemies/explode/0002.png" id="4_wtngi"]
[ext_resource type="Texture2D" uid="uid://cyhwbr7s78hei" path="res://assets/sprites/enemies/explode/0003.png" id="5_fepgi"]
[ext_resource type="Texture2D" uid="uid://buope61qn72ws" path="res://assets/sprites/enemies/explode/0004.png" id="6_clex5"]
[ext_resource type="Texture2D" uid="uid://d0fpytunl0uj6" path="res://assets/sprites/enemies/explode/0005.png" id="7_qnhpj"]
[ext_resource type="Texture2D" uid="uid://cy7o7c6kallxc" path="res://assets/sprites/enemies/explode/0006.png" id="8_jan6d"]
[ext_resource type="Texture2D" uid="uid://b4g36211qy4bc" path="res://assets/sprites/enemies/explode/0007.png" id="9_mklcg"]
[ext_resource type="Texture2D" uid="uid://1bbp8u7t6c3f" path="res://assets/sprites/enemies/explode/0008.png" id="10_erlkw"]

[sub_resource type="CircleShape2D" id="CircleShape2D_e1jfl"]
radius = 64.0

[sub_resource type="SpriteFrames" id="SpriteFrames_eu8ys"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_ebjwn")
}, {
"duration": 1.0,
"texture": ExtResource("4_wtngi")
}, {
"duration": 1.0,
"texture": ExtResource("5_fepgi")
}, {
"duration": 1.0,
"texture": ExtResource("6_clex5")
}, {
"duration": 1.0,
"texture": ExtResource("7_qnhpj")
}, {
"duration": 1.0,
"texture": ExtResource("8_jan6d")
}, {
"duration": 1.0,
"texture": ExtResource("9_mklcg")
}, {
"duration": 1.0,
"texture": ExtResource("10_erlkw")
}],
"loop": false,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_vl4ii"]
radius = 200.0

[node name="Enemy3" type="Area2D"]
modulate = Color(0.58, 0.2784, 0.2784, 1)
collision_mask = 2
linear_damp = 5.0
script = ExtResource("1_2yds0")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_cybcn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_e1jfl")

[node name="ExplosionTimer" type="Timer" parent="."]
one_shot = true

[node name="Explosion" type="AnimatedSprite2D" parent="."]
position = Vector2(2.08165e-12, 2.08165e-12)
scale = Vector2(6, 6)
sprite_frames = SubResource("SpriteFrames_eu8ys")
frame = 7
frame_progress = 1.0

[node name="ExplosionCollision" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_vl4ii")
disabled = true

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(2.08165e-12, 2.08165e-12)
scale = Vector2(4.45, 4.6)

[connection signal="body_entered" from="." to="." method="start_exploasion"]
[connection signal="timeout" from="ExplosionTimer" to="." method="_on_explosion_timer_timeout"]
[connection signal="animation_finished" from="Explosion" to="." method="_on_explosion_animation_finished"]
